<resources>
    <string name="app_name">taskManagement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type :</string>
    <string name="couleur">Couleur :</string>
    <string name="typeDeTaches">Definissez le type de tâche</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="fermer">Fermer</string>


    <string name="nomTache">Nom :</string>
    <string name="evenementDate">Date :</string>
    <string name="typeDeEvenement">Definissez le type d\'evenement</string>

    <string name="Types">Types</string>
    <string name="Accueil">Accueil</string>
    <string name="Calendrier">Calendrier</string>
    <string name="Evenements">Evenements</string>

    <string name="EvenementsNotif">Evenements</string>
    <string name="EvenementsNotifAujourdhui">évènement(s) aujourd\'hui</string>

</resources>