<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/typePopupEnregistrement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="50dp"
    android:clipToOutline="true"
    android:outlineProvider="background"
    android:background="@drawable/bords_arrondis_popup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="16dp"
        android:padding="16dp">




        <TextView
            android:text="@string/nomTache"
            android:id="@+id/nouveauEvenementNomTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/evenementNom"
            android:hint="@string/typeDeEvenement"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="text"
            android:maxLines="1"
            android:background="@drawable/rectangle_arrondi_blanc"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:text="@string/type"
            android:id="@+id/nouveauEvenementTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            />

        <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/evenementType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#FFFFFF"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:background="@drawable/rectangle_arrondi_blanc"/>



        <TextView
            android:text="@string/evenementDate"
            android:id="@+id/nouveauEvenementDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            />
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:textColor="@color/grey"
            android:theme="@style/textDatePickerSpinner"
            android:background="@drawable/rectangle_arrondi_blanc"/>










    </LinearLayout>

    <!--bouton fermer -->
    <Button
        android:id="@+id/boutonPopupFermerEvenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermer"
        android:backgroundTint="@color/red"
        android:layout_gravity="bottom"/>

    <!-- bouton enregistrer ou modifier type dans la db-->
    <Button
        android:id="@+id/boutonPopupEnregistrementOuModificationEvenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        android:backgroundTint="@color/green"
        android:layout_gravity="bottom|right"/>

</FrameLayout>