<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/typePopupEnregistrement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="50dp"
    android:clipToOutline="true"
    android:outlineProvider="background"
    android:background="@drawable/bords_arrondis_popup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="16dp"
        android:padding="16dp">




        <TextView
            android:text="@string/nomTache"
            android:id="@+id/nouveauEvenementNomTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/evenementNom"
            android:hint="@string/typeDeEvenement"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:background="@drawable/rectangle_arrondi_a_bordure"
            />

        <TextView
            android:text="@string/type"
            android:id="@+id/nouveauEvenementTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            />

        <Spinner
            android:id="@+id/evenementType"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="@color/grey"
            android:background="@drawable/rectangle_arrondi_a_bordure"/>


        <TextView
            android:text="@string/evenementDate"
            android:id="@+id/nouveauEvenementDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/grey">


        <Spinner
            android:id="@+id/evenementJour"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.25"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="@color/grey"
            android:background="@drawable/rectangle_arrondi_a_bordure"/>

        <Spinner
            android:id="@+id/evenementMois"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.25"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="@color/grey"
            android:background="@drawable/rectangle_arrondi_a_bordure"/>

        <Spinner
            android:id="@+id/evenementAnnee"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/rectangle_arrondi_a_bordure"/>


    </LinearLayout>









    </LinearLayout>

    <!--bouton fermer -->
    <Button
        android:id="@+id/boutonPopupFermerEvenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermer"
        android:backgroundTint="@color/red"
        android:layout_gravity="bottom"/>

    <!-- bouton enregistrer type dans la dp-->
    <Button
        android:id="@+id/boutonPopupEnregistrementEvenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        android:backgroundTint="@color/green"
        android:layout_gravity="bottom|right"/>

</FrameLayout>
