<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/typePopupEnregistrement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="50dp"
    android:clipToOutline="true"
    android:outlineProvider="background"
    android:background="@drawable/bords_arrondis_popup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="16dp"
        android:padding="16dp">




        <TextView
            android:text="@string/type"
            android:id="@+id/nouveauTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/nouveauType"
            android:hint="@string/typeDeTaches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"/>

        <TextView
            android:text="@string/couleur"
            android:id="@+id/couleurTV"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>


        <!-- Aperçu de la couleur sélectionnée -->
        <TextView
            android:id="@+id/color_preview"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            />



        <!-- Barre de défilement rouge -->
        <SeekBar
            android:id="@+id/red_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progress="0"
           />

        <!-- Barre de défilement vert -->
        <SeekBar
            android:id="@+id/green_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"/>

        <!-- Barre de défilement bleu -->
        <SeekBar
            android:id="@+id/blue_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"/>




    </LinearLayout>

    <!--bouton fermer -->
    <Button
        android:id="@+id/boutonPopupFermer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermer"
        android:backgroundTint="@color/red"
        android:layout_gravity="bottom"/>

    <!-- bouton enregistrer type dans la dp-->
    <Button
        android:id="@+id/boutonPopupEnregistrementType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        android:backgroundTint="@color/green"
        android:layout_gravity="bottom|right"/>

</FrameLayout>
